--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,7 @@
 <!-- الهيدر مع قص ذكي والوقت في الأسفل -->
 <header class="fade-in" style="background: transparent; box-shadow: none; padding: 0; position: relative; margin: 0;">
   <div style="position: relative; overflow: hidden; border-bottom-left-radius: 25px; border-bottom-right-radius: 25px; box-shadow: 0 8px 25px rgba(106, 90, 205, 0.4);">
-    <img src="images/hh.png" alt="واجهة المعلم الرقمي - أ. محمد حمدان الغامدي" 
+    <img src="images/bb.png" alt="واجهة المعلم الرقمي - أ. محمد حمدان الغامدي" 
          class="responsive-header" style="width: 100%; height: 250px; object-fit: cover; object-position: center 30%; display: block;">
     
     <!-- الوقت والتاريخ في الأسفل -->
@@ -1629,6 +1629,7 @@ initSearch();
 
 </body>
 </html>
+
 
 
 
