--- a/index.html
+++ b/index.html
@@ -1083,17 +1083,21 @@
 <!-- الهيدر المعدل ليتناسب مع أبعاد 1500x250 -->
 <!-- الهيدر مع قص ذكي والوقت في الأسفل -->
 <header class="fade-in" style="background: transparent; box-shadow: none; padding: 0; position: relative; margin: 0;">
-  <div style="position: relative; overflow: hidden; border-bottom-left-radius: 25px; border-bottom-right-radius: 25px; box-shadow: 0 8px 25px rgba(106, 90, 205, 0.4);">
+  <div style="position: relative; overflow: hidden; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px; box-shadow: 0 6px 20px rgba(106, 90, 205, 0.4);">
     <img src="images/bb.png" alt="واجهة المعلم الرقمي - أ. محمد حمدان الغامدي" 
-         class="responsive-header" style="width: 100%; height: 250px; object-fit: cover; object-position: center 30%; display: block;">
+         class="responsive-header" 
+         style="width: 100%; height: 100px !important; max-height: 100px !important; object-fit: cover; object-position: center 30%; display: block;">
     
-    <!-- الوقت والتاريخ في الأسفل -->
-    <div style="position: absolute; bottom: 15px; left: 50%; transform: translateX(-50%); width: 90%; max-width: 350px; z-index: 2;">
-      <div class="compact-date" dir="rtl" style="background: #d6cdeb; color: #000000; border: 2px solid #632cde; padding: 8px 20px; border-radius: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.15); font-weight: 600; font-size: 0.9rem; text-align: center;">
+    <!-- الوقت والتاريخ بدون إطار -->
+    <div style="position: absolute; bottom: 6px; left: 50%; transform: translateX(-50%); width: 90%; max-width: 350px; z-index: 2;">
+      <div class="compact-date" dir="rtl" 
+           style="background: #d6cdeb; color: #5D3FD3; padding: 2px 6px !important; border-radius: 10px; 
+                  box-shadow: 0 1px 4px rgba(0,0,0,0.12); font-weight: 400; font-size: 0.55rem !important; 
+                  text-align: center; backdrop-filter: blur(5px);">
         <span id="hijri-date"></span> 
-        <span class="separator" style="color: #632cde; margin: 0 8px; font-weight: bold;">•</span>
+        <span class="separator" style="color: #7A43CC; margin: 0 4px; opacity: 0.7;">•</span>
         <span id="gregorian-date"></span>
-        <span class="separator" style="color: #632cde; margin: 0 8px; font-weight: bold;">•</span>
+        <span class="separator" style="color: #7A43CC; margin: 0 4px; opacity: 0.7;">•</span>
         <span id="live-time"></span>
       </div>
     </div>
@@ -1101,7 +1105,7 @@
 </header>
 
 <!-- شريط البحث الجديد -->
-<div class="search-container fade-in">
+<div class="search-container fade-in" style="margin-top: 20px !important;">
   <div class="search-box">
     <input type="text" class="search-input" placeholder="ابحث في المحتوى التعليمي..." id="searchInput">
     <button class="search-button" id="searchButton">
@@ -1629,6 +1633,7 @@ initSearch();
 
 </body>
 </html>
+
 
 
 
