--- a/index.html
+++ b/index.html
@@ -1063,6 +1063,19 @@
     padding: 5px 12px !important;
   }
 }
+    /* تكبير الوقت والتاريخ على الجوال */
+@media (max-width: 768px) {
+  #hijri-date, #gregorian-date {
+      font-size: 1.8rem;  /* حجم أكبر للتاريخ */
+      font-weight: 600;
+  }
+
+  #live-time {
+      font-size: 2.5rem;  /* حجم أكبر للوقت */
+      font-weight: 700;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -1633,6 +1646,7 @@ initSearch();
 
 </body>
 </html>
+
 
 
 
