--- a/index.html
+++ b/index.html
@@ -1063,16 +1063,10 @@
     padding: 5px 12px !important;
   }
 }
-    /* تكبير الوقت والتاريخ على الجوال */
+/* تصغير أكبر قليلاً للتاريخ والوقت على الجوال */
 @media (max-width: 768px) {
-  #hijri-date, #gregorian-date {
-      font-size: 1.8rem;  /* حجم أكبر للتاريخ */
-      font-weight: 600;
-  }
-
-  #live-time {
-      font-size: 2.5rem;  /* حجم أكبر للوقت */
-      font-weight: 700;
+  #hijri-date, #gregorian-date, #live-time {
+      font-size: 0.64rem; /* أصغر قليلاً أكثر */
   }
 }
 
@@ -1646,6 +1640,7 @@ initSearch();
 
 </body>
 </html>
+
 
 
 
