--- a/index.html
+++ b/index.html
@@ -1098,6 +1098,17 @@
         background-position: center;
     }
 }
+#header {
+    height: 200px; /* ثابت لكل الوضعيات */
+    overflow: hidden;
+}
+
+#header img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
 
   </style>
 </head>
@@ -1669,6 +1680,7 @@ initSearch();
 
 </body>
 </html>
+
 
 
 
