--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,7 @@
 <!-- الهيدر مع قص ذكي والوقت في الأسفل -->
 <header class="fade-in" style="background: transparent; box-shadow: none; padding: 0; position: relative; margin: 0;">
   <div style="position: relative; overflow: hidden; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px; box-shadow: 0 6px 20px rgba(106, 90, 205, 0.4);">
-    <img src="images/hk.png" alt="واجهة المعلم الرقمي - أ. محمد حمدان الغامدي" 
+    <img src="images/ww.png" alt="واجهة المعلم الرقمي - أ. محمد حمدان الغامدي" 
          class="responsive-header" 
          style="width: 100%; height: 100px !important; max-height: 100px !important; object-fit: cover; object-position: center 30%; display: block;">
     
@@ -1680,6 +1680,7 @@ initSearch();
 
 </body>
 </html>
+
 
 
 
