--- a/index.html
+++ b/index.html
@@ -1131,16 +1131,16 @@
 <!-- الهيدر مع قص ذكي والوقت في الأسفل -->
 <header class="fade-in" style="background: transparent; box-shadow: none; padding: 0; position: relative; margin: 0;">
   <div style="position: relative; overflow: hidden; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px; box-shadow: 0 6px 20px rgba(106, 90, 205, 0.4);">
-    <img src="images/ww.png" alt="واجهة المعلم الرقمي - أ. محمد حمدان الغامدي" 
+    <img src="images/ss.png" alt="واجهة المعلم الرقمي - أ. محمد حمدان الغامدي" 
          class="responsive-header" 
          style="width: 100%; height: 100px !important; max-height: 100px !important; object-fit: cover; object-position: center 30%; display: block;">
     
     <!-- الوقت والتاريخ بدون إطار -->
     <div style="position: absolute; bottom: 6px; left: 50%; transform: translateX(-50%); width: 90%; max-width: 350px; z-index: 2;">
       <div class="compact-date" dir="rtl" 
-           style="background: #d6cdeb; color: #5D3FD3; padding: 2px 6px !important; border-radius: 10px; 
-                  box-shadow: 0 1px 4px rgba(0,0,0,0.12); font-weight: 400; font-size: 0.55rem !important; 
-                  text-align: center; backdrop-filter: blur(5px);  border: 0.5px solid rgba(93, 63, 211, 0.3);">
+           style="background: #e6e8fb; color: #000000; padding: 2px 6px !important; border-radius: 10px; 
+                  box-shadow: 0 1px 4px rgba(0,0,0,0.12); font-weight: 800; font-size: 0.55rem !important; 
+                  text-align: center; backdrop-filter: blur(5px);  border: 0.5px solid rgba(93, 63, 211, 0.3); border: none;">
         <span id="hijri-date"></span> 
         <span class="separator" style="color: #7A43CC; margin: 0 4px; opacity: 0.7;">•</span>
         <span id="gregorian-date"></span>
@@ -1680,6 +1680,7 @@ initSearch();
 
 </body>
 </html>
+
 
 
 
