--- a/index.html
+++ b/index.html
@@ -1642,9 +1642,11 @@
     title="نموذج استفسارات الطلاب">
     جاري التحميل...
   </iframe>
-  <a href="https://docs.google.com/spreadsheets/d/14FqkF7e83_KW_Gd48G2OlRLIJYuaKYTPndo-qb5DjKo/edit?usp=sharing" class="answers-link" target="_blank">
+<a href="https://docs.google.com/spreadsheets/d/14FqkF7e83_KW_Gd48G2OlRLIJYuaKYTPndo-qb5DjKo/edit?usp=sharing" 
+   target="_blank"
+   style="display: block; text-align: center; margin: 25px auto; padding: 14px 25px; background: var(--primary-500); color: white; border-radius: 35px; text-decoration: none; font-weight: 700; width: fit-content; transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); box-shadow: 0 5px 15px rgba(122, 67, 204, 0.4); border: none;">
     <i class="fas fa-external-link-alt"></i> إجابة المعلم على الاستفسارات   
-  </a>
+</a>
   <div class="google-form-footer">
     <small><i class="fas fa-info-circle"></i> سيتم الرد على استفسارك خلال مدة قصيرة   </small>
   </div>
@@ -2031,5 +2033,6 @@ document.addEventListener('DOMContentLoaded', initAIAssistant);
 
 </body>
 </html>
+
 
 
