--- a/index.html
+++ b/index.html
@@ -1146,18 +1146,7 @@
   gap: 1rem;
 }
 
-.ai-header::after {
-  content: "";
-  position: absolute;
-  bottom: -12px;
-  right: 50%;
-  transform: translateX(50%);
-  width: 80px;
-  height: 4px;
-  background: var(--primary-500);
-  border-radius: 4px;
-  box-shadow: 0 0 10px var(--primary-soft-1);
-}
+
 
 .ai-icon {
   font-size: 2rem;
@@ -1522,7 +1511,7 @@
         <h3 class="card-title">تحليل النتائج</h3>
       </div>
       <div class="card" style="animation-delay: 0.2s;" data-url="https://sites.google.com/view/sdfdrttr4/ed?authuser=1">
-        <i class="fas fa-user-graduate card-icon"></i>
+        <i class="fas fa-crown card-icon"></i>
         <h3 class="card-title">الطلاب المتفوقين</h3>
       </div>
       <div class="card" style="animation-delay: 0.25s;" data-url="https://sites.google.com/view/drhfbtrh55/bn?authuser=1">
@@ -1535,7 +1524,7 @@
   <!-- مكتبة الطالب -->
   <section class="section-card fade-in">
     <h2 class="section-title">
-      <i class="fas fa-book-open section-icon"></i>
+      <i class="fas fa-user-graduate section-icon"></i>
       مكتبة الطالب
     </h2>
     <div class="cards-container">
@@ -1562,7 +1551,7 @@
     </h2>
     <div class="cards-container">
       <div class="card" style="animation-delay: 0.05s;" data-url="https://sites.google.com/view/sdfgbdh77/wc?authuser=1">
-        <i class="fas fa-book card-icon"></i>
+        <i class="fas fa-code card-icon"></i>
         <h3 class="card-title">كتب التقنية</h3>
       </div>
       <div class="card" style="animation-delay: 0.1s;" data-url="https://sites.google.com/view/sdfgdf6/vm?authuser=1">
@@ -1628,7 +1617,7 @@
 <!-- قسم الاستفسارات -->
 <div class="google-form-container fade-in">
   <h2 class="google-form-header">
-    <i class="fas fa-comments section-icon"></i>  الاستفسارات التعليمية
+    <i class="fas fa-comment-dots section-icon"></i>  قسم الاستفسارات 
   </h2>
   
   <iframe 
@@ -2033,6 +2022,7 @@ document.addEventListener('DOMContentLoaded', initAIAssistant);
 
 </body>
 </html>
+
 
 
 
