--- a/index.html
+++ b/index.html
@@ -1581,10 +1581,10 @@
 </div>
 <!-- قسم مساعد الذكاء الاصطناعي -->
 <div class="ai-assistant-container fade-in">
-  <h2 class="ai-header">
-    <i class="fas fa-robot ai-icon"></i>
-     الذكاء الاصطناعي  
-  </h2>
+<h2 class="ai-header" style="display: flex; align-items: center; justify-content: center; gap: 1rem;">
+  <i class="fas fa-robot ai-icon" style="margin-top: 0; align-self: center;"></i>
+  <span>الذكاء الاصطناعي</span>
+</h2>
   
   <p class="ai-description">
     اسأل عن أي موضوع في التقنية الرقمية أو غيرها من المواضيع 
@@ -1616,8 +1616,9 @@
 </div>
 <!-- قسم الاستفسارات -->
 <div class="google-form-container fade-in">
-  <h2 class="google-form-header">
-    <i class="fas fa-comment-dots section-icon"></i>  قسم الاستفسارات 
+  <h2 class="google-form-header" style="display: flex; align-items: center; gap: 0.8rem;">
+    <i class="fas fa-comment-dots section-icon"></i> 
+    <span>الاستفسارات التعليمية</span>
   </h2>
   
   <iframe 
@@ -2022,6 +2023,7 @@ document.addEventListener('DOMContentLoaded', initAIAssistant);
 
 </body>
 </html>
+
 
 
 
