--- a/index.html
+++ b/index.html
@@ -1581,10 +1581,10 @@
 </div>
 <!-- قسم مساعد الذكاء الاصطناعي -->
 <div class="ai-assistant-container fade-in">
-  <h2 class=" <i class="fas fa-robot ai-icon" style="margin-top: 0;ai-header" style="display: flex; align-items: center; justify-content: center; gap: 1rem;">
-    align-self: center;"></i>
-    <span>الذكاء الاصطناعي</span>
-  </h2>
+<h2 class="ai-header" style="display: flex; align-items: center; justify-content: center; gap: 1rem;">
+  <i class="fas fa-robot ai-icon" style="margin-top: 0; align-self: center;"></i>
+  <span>الذكاء الاصطناعي</span>
+</h2>
   
   <p class="ai-description">
     اسأل عن أي موضوع في التقنية الرقمية أو غيرها من المواضيع 
@@ -2023,6 +2023,7 @@ document.addEventListener('DOMContentLoaded', initAIAssistant);
 
 </body>
 </html>
+
 
 
 
