--- a/index.html
+++ b/index.html
@@ -1351,11 +1351,11 @@
 <!-- الوقت والتاريخ الجديد فوق خانة البحث -->
 <div class="date-time-container fade-in" style="text-align: center; margin-bottom: 10px; margin-top: 20px;">
   <div class="compact-date new-position" dir="rtl">
-    <span id="hijri-date"></span> 
+    <i class="fas fa-calendar-alt" style="color: var(--primary-500); margin-left: 5px;"></i><span id="hijri-date"></span> 
     <span class="separator" style="color: #7A43CC; margin: 0 4px; opacity: 0.7;">•</span>
     <span id="gregorian-date"></span>
     <span class="separator" style="color: #7A43CC; margin: 0 4px; opacity: 0.7;">•</span>
-    <span id="live-time"></span>
+    <i class="fas fa-clock" style="color: var(--primary-500); margin-left: 5px;"></i><span id="live-time"></span>
   </div>
 </div>
 
