--- a/index.html
+++ b/index.html
@@ -59,17 +59,19 @@
     }
 
     /* شريط الإشعارات المعدل - تم تقليل الارتفاع بشكل كبير */
-    .notification-bar {
-      background: var(--notification-color);
-      color: #2c2c3a;
-      padding: 8px 0; /* تم تقليل من 12px */
-      overflow: hidden;
-      position: relative;
-      width: 100%;
-      box-shadow: 0 2px 10px rgba(122, 67, 204, 0.2);
-      border-bottom: 1px solid rgba(106, 90, 205, 0.2);
-      font-size: 0.9rem; /* تم تقليل حجم الخط */
-    }
+/* شريط الإشعارات المعدل - تم تغيير اللون فقط */
+.notification-bar {
+  background: #e6e8fb; /* <-- هذا هو التغيير الوحيد */
+  color: #2c2c3a;
+  padding: 8px 0;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  box-shadow: 0 2px 10px rgba(122, 67, 204, 0.2);
+  border-bottom: 1px solid rgba(106, 90, 205, 0.2);
+  font-size: 0.9rem;
+}
+
 
    .notification-container {
   display: inline-block;
@@ -1319,6 +1321,56 @@
   color: var(--green-text);
   margin-left: 0.5rem;
 }
+/* ================================================== */
+/*              تنسيقات تذييل الصفحـة (Footer)             */
+/* ================================================== */
+.site-footer {
+  background: #f0f0f7; /* لون خلفية هادئ ومختلف قليلاً عن الجسم */
+  color: var(--text-light);
+  padding: 2rem 1.5rem;
+  text-align: center;
+  margin-top: 3rem; /* مسافة علوية لفصله عن المحتوى */
+  border-top: 1px solid rgba(122, 67, 204, 0.1);
+}
+
+.footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-links {
+  margin-bottom: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem; /* مسافة بين الروابط */
+  flex-wrap: wrap; /* للسماح بالالتفاف على الشاشات الصغيرة */
+}
+
+.footer-link {
+  color: var(--text-dark);
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1rem;
+  transition: var(--transition);
+  display: flex;
+  align-items: center;
+  gap: 0.5rem; /* مسافة بين الأيقونة والنص */
+}
+
+.footer-link:hover {
+  color: var(--primary-500);
+  transform: translateY(-2px);
+}
+
+.footer-link i {
+  color: var(--primary-500);
+}
+
+.footer-copyright {
+  font-size: 0.9rem;
+}
+
   </style>
 </head>
 <body>
@@ -1617,7 +1669,7 @@
   </section>
 </div>
 <!-- قسم مساعد الذكاء الاصطناعي -->
-<div class="ai-assistant-container fade-in">
+<div id="ai-assistant-section" class="ai-assistant-container fade-in">
 <h2 class="ai-header" style="display: flex; align-items: center; justify-content: center; gap: 1rem;">
   <i class="fas fa-robot ai-icon" style="margin-top: 0; align-self: center;"></i>
   <span>الذكاء الاصطناعي</span>
@@ -2057,6 +2109,24 @@ function initAIAssistant() {
 // تهيئة المساعد عند تحميل الصفحة
 document.addEventListener('DOMContentLoaded', initAIAssistant);
 </script>
+<!-- ================================================== -->
+<!--                  تذييل الصفحـة (Footer)                 -->
+<!-- ================================================== -->
+<footer class="site-footer">
+  <div class="footer-content">
+    <div class="footer-links">
+      <a href="mailto:mfh713623@gmail.com" class="footer-link">
+        <i class="fas fa-envelope"></i> البريد الإلكتروني
+      </a>
+      <a href="#ai-assistant-section" class="footer-link">
+        <i class="fas fa-robot"></i> مساعد الذكاء الاصطناعي
+      </a>
+    </div>
+    <div class="footer-copyright">
+      © 2026 جميع الحقوق محفوظة | واجهة المعلم الرقمي - أ. محمد الغامدي
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
